# sc-controller

./: .gitignore  .travis.yml  README.md  appimage-build.sh  daemon.sh  generate-icons.py  generate_svg.py  make-win32-release.sh  meson-custom-install.sh  meson-run.sh  meson.build  run.sh  setup.cfg  setup.py  update-wiki.py
.pybuild/cpython3_3.8/: .pydistutils.cfg  testfiles_to_rm_before_install
.pybuild/cpython3_3.8_sc-controller/: .pydistutils.cfg
compile/meson-info/: meson-info.json
compile/meson-logs/: meson-log.txt
debian/: changelog  control  files  rules
default_menus/: meson.build
default_profiles/: Desktop.sccprofile  XBox Controller with High Precision Camera.sccprofile  XBox Controller.sccprofile  meson.build
docs/: actions.md
glade/: about.glade
glade/ae/: trigger.glade
include/scc/: tools.h
include/scc/utils/: strbuilder.h
meson-info/: meson-info.json
meson-logs/: meson-log.txt
obj-x86_64-linux-gnu/: .ninja_deps  .ninja_log  action_initializers.inc  build.ninja  compile_commands.json
obj-x86_64-linux-gnu/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
obj-x86_64-linux-gnu/meson-logs/: install-log.txt  meson-log.txt  testlog.json  testlog.txt
obj-x86_64-linux-gnu/meson-private/: cmd_line.txt
obj-x86_64-linux-gnu/scc-actions@sha/: libscc-actions.so.symbols
obj-x86_64-linux-gnu/scc-bindings@sha/: libscc-bindings.so.symbols
obj-x86_64-linux-gnu/scc-config@sha/: libscc-config.so.symbols
obj-x86_64-linux-gnu/scc-conversions@sha/: libscc-conversions.so.symbols
obj-x86_64-linux-gnu/scc-parser@sha/: libscc-parser.so.symbols
obj-x86_64-linux-gnu/scc-tools@sha/: libscc-tools.so.symbols
obj-x86_64-linux-gnu/scc-utils@sha/: libscc-utils.so.symbols
obj-x86_64-linux-gnu/share/scc/glade/ae/: trigger.glade
obj-x86_64-linux-gnu/src/client/f537023@@scc-client@sha/: libscc-client.so.symbols
obj-x86_64-linux-gnu/src/client/f537023@@scc-gio-client@sha/: libscc-gio-client.so.symbols
obj-x86_64-linux-gnu/src/client/f537023@@scc-slave-mapper@sha/: libscc-slave-mapper.so.symbols
obj-x86_64-linux-gnu/src/daemon/: scc-daemon  scc-input-tester
obj-x86_64-linux-gnu/src/gui/: sc-controller
obj-x86_64-linux-gnu/src/osd/: scc-osd-daemon  scc-osd-keyboard  scc-osd-menu
obj-x86_64-linux-gnu/src/osd/common/ab2087b@@scc-osd@sha/: libscc-osd.so.symbols
obj-x86_64-linux-gnu/src/osd/keyboard/d7e72fb@@scc-osd-keyboard@sha/: libscc-osd-keyboard.so.symbols
obj-x86_64-linux-gnu/src/osd/menus/1f13cc7@@scc-osd-menu@sha/: libscc-osd-menu.so.symbols
obj-x86_64-linux-gnu/src/virtual-device/bcbf24e@@scc-virtual-device@sha/: libscc-virtual-device.so.symbols
obj-x86_64-linux-gnu/tests/: test_actions  test_bindings  test_client  test_compress  test_config  test_macros  test_menu_generators  test_menudata  test_modeshift  test_modifiers  test_param_checker  test_parser  test_paths  test_profile  test_utils
python/: scc
python/scc/: parser.py  tools.py
python/scc/gui/: app.py  daemon_manager.py  profile_switcher.py  ribar.py  statusicon.py  svg_widget.py
python/scc/gui/creg/: tester.py
python/scc/gui/importexport/: dialog.py
python/tests/: test_compress.py  test_config.py  test_controller_config.py  test_descriptions.py
python/tests/test_parser/: test_actions.py  test_macros.py  test_modifiers.py  test_special_actions.py
python/tests/test_strings/: test_modifiers.py
reconfigure/: build.ninja  compile_commands.json
reconfigure/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-targets.json  intro-tests.json  meson-info.json
reconfigure/meson-logs/: meson-log.txt
reconfigure/meson-private/cmake_python-3/: CMakeCache.txt  Makefile  cmake_install.cmake
scc/: actions.py  config.py  constants.py  gestures.py  mapper.py  modifiers.py  paths.py  profile.py  sccdaemon.py  special_actions.py  uinput.c  uinput.py
scc/drivers/: evdevdrv.py  sc_dongle.py
scc/gui/: action_editor.py  app.py  binding_editor.py  controller_settings.py  daemon_manager.py  dwsnc.py  editor.py  global_settings.py  macro_editor.py  menu_editor.py  profile_switcher.py  ribar.py  statusicon.py  svg_widget.py  userdata_manager.py
scc/gui/ae/: __init__.py  axis_action.py  gesture.py  special_action.py  trigger.py
scc/gui/creg/: dialog.py  tester.py
scc/gui/importexport/: dialog.py  import_sccprofile.py  import_vdf.py
scc/lib/: eudevmonitor.py  jsonencoder.py  libusb1.py  xwrappers.py
scc/osd/: __init__.py  gesture_display.py  menu.py  menu_generators.py  radial_menu.py  slave_mapper.py
scripts/: appimage-AppRun.sh  sc-controller.appdata.xml  sc-controller.desktop
share/: default_menus  default_profiles  meson.build
share/application/: sc-controller.desktop
share/scc/: default_menus  default_profiles  gamecontrollerdb.txt  glade  meson.build  osd-styles  wrap-files.sh
src/actions/: TODOS.md
src/client/: meson.build
src/config/: common.c  config_json.c
src/daemon/: drivers.c  meson.build  version.h
src/daemon/drivers/: meson.build
src/gui/: gui.c  meson.build  sc-controller.rc
src/menu-generators/: meson.build
src/osd/: meson.build
src/osd/common/: css_magic.c  meson.build
src/osd/keyboard/: meson.build
src/osd/menus/: meson.build
src/tools/: load_library.c  paths.c
src/virtual-device/: meson.build
tests/: test_menu_generators.c  test_menudata.c  test_modifiers.c  test_paths.c  test_profile.c
