[MASTER]
init-hook='import sys; sys.path.append("./Development")'

[metadata]
description-file = README

[flake8]
max-line-length = 4096
doctests = True
ignore = W191,colon,duplicate-code,E303,E251,E266,E701,E702,E704,B008,F841,E117,F541,F811,W292,E203

[mypy]
python_version = 3.8
incremental = False
cache_dir = /dev/nul
mypy_path = ./Development/stubs/:./Development/

[mypy-wac.util.appdirs.*]
ignore_errors = True

[pylint]
include-naming-hint=y

ignore=.git

indent-string="\t"
max-line-length=4096
max-module-lines=3000

disable=too-many-locals,
	too-few-public-methods,
	too-many-arguments,
	too-many-branches,
	too-many-instance-attributes,
	too-many-nested-blocks, R1702,
	too-many-public-methods,
	too-many-return-statements,
	too-many-statements,
	broad-except,
	using-constant-test,
	misplaced-comparison-constant,
	multiple-statements,
	unused-argument,
	bad-continuation,
	duplicate-code,
	no-self-use

[pydocstyle]
inherit = false
ignore = D401,D203,D212
